# symbiont

./: .coverage  .gitignore  CARTILHA.md  CHANGELOG-v2-density.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: bench_research_squad.py
data/: coding-python-train.jsonl  legal-br-train.jsonl
docs/: ARCHITECTURE.md  CONSULTORIA.md  INSTALACAO.md  PRODUTO.md  SOCIAL-CONTENT.md  VALIDATION.md
examples/: demo.py
kestra/: alert-check.yml  health-check.yml  memory-consolidation.yml  research_pipeline.yml  task-dispatch.yml  tech-debt-audit.yml
symbiont/: __init__.py  agent_tolerance.py  alerts.py  antibodies.py  audit.py  backends.py  background_memory.py  cli.py  colony.py  compact.py  config.py  dashboard.py  datasets.py  deferred_tools.py  emergent_specialization.py  federation.py  finetune.py  gpu_router.py  handoffs.py  legal_assembly.py  mcp_registry.py  memory.py  memory_scoring.py  modal_backend.py  organism.py  oxe_bridge.py  persistence.py  research_squad.py  sandbox.py  scratch.py  scratchpad.py  sentinel.py  serve.py  squads.py  stress.py  success_memory.py  synthesis.py  tools.py  translation.py  types.py  (+1 more)
tests/: test_agent_tolerance.py  test_alerts.py  test_antibodies.py  test_background_memory.py  test_circuit_breaker.py  test_colony.py  test_compact.py  test_dashboard.py  test_datasets.py  test_deferred_tools.py  test_density_translator.py  test_e2e_anthropic.py  test_emergent_specialization.py  test_federation.py  test_gpu_router.py  test_mcp_registry.py  test_memory_cursor.py  test_memory_scoring.py  test_organism.py  test_sandbox.py  (+10 more)
(+24 files in other folders)
