[project]
name = "symbiont"
version = "0.1.0"
description = "Symbiotic Multi-pattern Bio-intelligent Organism for Networked Tasks"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.42.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
